frontend/styles/mobile.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 1.5;
}

body {
  background-color: #fafafa;
}

nav {
  padding: 2rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  background-color: #f6f6f6;
}

nav > h1 {
  font-size: 1.5rem;
  color: #252b42;
}
nav > div:nth-of-type(1) {
  margin-left: auto;
  display: flex;
}
nav > div:nth-of-type(2) {
  margin: 2.5rem 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
nav > div:nth-of-type(3) {
  display: none;
}

nav > div > a {
  text-decoration: none;
  color: #737373;
  font-size: 2rem;
}
nav > div:nth-of-type(1) > a {
  height: 2rem;
}
nav > div:nth-of-type(1) > a:not(:first-child) {
  margin-left: 1rem;
}
nav > div:nth-of-type(2) > a {
  margin-top: 2.5rem;
}
nav > div:nth-of-type(2) > a:last-child {
  margin-bottom: 2.5rem;
}

nav > div:nth-of-type(1) > a > img {
  width: 2rem;
}

header {
  padding: 2rem;
  padding-bottom: 7rem;
  display: flex;
  flex-direction: column;
  background-image: url(../images/hero.png);
  background-position: bottom;
  background-repeat: no-repeat;
  background-size: cover;
}

header > article {
  margin: 2rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 2rem;
  text-align: center;
  color: #ffffff;
}
header > section {
}

header > article > h2 {
  margin-top: 2rem;
  font-size: 2.5rem;
}
header > article > p {
  width: 78%;
  margin: 2rem 0;
  font-size: 1.25rem;
}
header > article > a {
  padding: 0.5rem 2rem;
  margin-bottom: 1.5rem;
  border-radius: 2rem;
  color: #ffffff;
  text-decoration: none;
  font-weight: 700;
}
header > article > a:first-of-type {
  background-color: #23a6f0;
}
header > article > a:last-of-type {
  border: 1px #ffffff solid;
}
header > section > article {
  margin: 2rem 0;
  padding: 2rem;
  background-color: #ffffff;
}
header > section > article:last-child {
  background-color: #23a6f0;
  color: #ffffff;
}

header > section > article > img {
  width: 3.5rem;
}
header > section > article > h3 {
  margin: 0.5rem 0;
  font-size: 1.5rem;
}
header > section > article > p {
  color: #737373;
}
header > section > article:last-child > p {
  color: #ffffff;
}

header + section {
  padding: 2.5rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  background-color: #ffffff;
}
header + section > article {
  width: 100%;
  margin: 2.5rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
header + section > article > img {
  margin: 1rem 0;
}
header + section > article > h3 {
  margin: 0.5rem 0;
  font-size: 1.17rem;
  color: #252b42;
}
header + section > article > p {
  width: 80%;
  color: #737373;
}

main {
  padding: 2rem;
}

main > article {
  margin: 2rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
main > aside {
  display: flex;
  gap: 5rem;
  flex-direction: column;
  align-items: center;
}
main > form {
}
main > section {
}

main > article > h2 {
  font-size: 2.5rem;
  font-weight: 400;
}
main > article > p {
  margin: 1rem 0;
  padding: 0 1.5rem;
  color: #737373;
}
main > article > section {
  margin: 3rem 0;
  display: grid;
  grid-template-columns: 1fr;
  gap: 2rem;
}
main > article > div {
}
main > article > img {
}
main > aside > div {
  display: flex;
  flex-direction: column;
  gap: 3.5rem;
}
main > aside > section {
}
main > form > img {
}
main > form > h3 {
}
main > form > div {
}
main > section > h3 {
}
main > section > p {
}
main > section > a {
}

main > article > section > div {
  padding: 2.5rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  background-color: #ffffff;
  border: 1px #dedede solid;
  border-radius: 0.5rem;
  align-items: center;
  color: #737373;
}
main > article > section > article {
}
main > article > div > h2 {
}
main > article > div > p {
}
main > aside > div > img {
  width: 10rem;
}
main > aside > section > h3 {
}
main > aside > section > input {
}
main > aside > section > button {
}
main > form > div > label {
}
main > form > div > label > input {
}

main > article > section > div > img {
  width: 10rem;
}
main > article > section > article > h3 {
}
main > article > section > article > h4 {
}
main > article > section > article > p {
}
main > article > section > article > ul {
}
main > article > section > article > a {
}

main > article > section > article > ul > li {
}

